# net-worth-tracker

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
app/: cli.py  config.py  enums.py  main.py
app/api/: __init__.py
app/api/endpoints/: accounts.py  sync.py  values.py
app/database/: __init__.py  database.py
app/models/: __init__.py  account.py  sync_state.py  value.py
app/schemas/: __init__.py  account.py  value.py
app/services/: backup.py  drive.py  importer.py  sync.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App-simple.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: AccountSelector.tsx  MonthlyChanges.tsx  NetWorthChart.tsx  SummaryStats.tsx  TagFilter.tsx  ViewModeToggle.tsx
frontend/src/contexts/: theme.tsx
frontend/src/lib/: stats.ts
frontend/src/pages/: NetWorth.tsx  PortfolioBreakdown.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
memory/: MEMORY.md
scripts/: hit_api.py  load_from_excel.py  load_values.py
tests/: conftest.py  test_importer.py
